// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavigationMenu stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <nav
    aria-label="Main"
    class="group/navigation-menu relative flex max-w-max flex-1 items-center justify-center"
    data-orientation="horizontal"
    data-slot="navigation-menu"
    data-viewport="true"
    dir="ltr"
  >
    <div
      style="position: relative;"
    >
      <ul
        class="group flex flex-1 list-none items-center justify-center gap-1"
        data-orientation="horizontal"
        data-slot="navigation-menu-list"
        dir="ltr"
      >
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <button
            aria-controls="radix-«r0»-content-radix-«r1»"
            aria-expanded="false"
            class="group inline-flex h-9 w-max items-center justify-center rounded-md bg-background px-4 py-2 text-sm font-medium hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground disabled:pointer-events-none disabled:opacity-50 data-[state=open]:hover:bg-accent data-[state=open]:text-accent-foreground data-[state=open]:focus:bg-accent data-[state=open]:bg-accent/50 focus-visible:ring-ring/50 outline-none transition-[color,box-shadow] focus-visible:ring-[3px] focus-visible:outline-1 group"
            data-radix-collection-item=""
            data-slot="navigation-menu-trigger"
            data-state="closed"
            id="radix-«r0»-trigger-radix-«r1»"
          >
            Components
             
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down relative top-[1px] ml-1 size-3 transition duration-300 group-data-[state=open]:rotate-180"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </li>
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <a
            class="data-[active=true]:focus:bg-accent data-[active=true]:hover:bg-accent data-[active=true]:bg-accent/50 data-[active=true]:text-accent-foreground hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground focus-visible:ring-ring/50 [&_svg:not([class*='text-'])]:text-muted-foreground flex flex-col gap-1 rounded-sm p-2 text-sm transition-all outline-none focus-visible:ring-[3px] focus-visible:outline-1 [&_svg:not([class*='size-'])]:size-4"
            data-radix-collection-item=""
            data-slot="navigation-menu-link"
            href="/docs"
          >
            Documentation
          </a>
        </li>
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <a
            class="data-[active=true]:focus:bg-accent data-[active=true]:hover:bg-accent data-[active=true]:bg-accent/50 data-[active=true]:text-accent-foreground hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground focus-visible:ring-ring/50 [&_svg:not([class*='text-'])]:text-muted-foreground flex flex-col gap-1 rounded-sm p-2 text-sm transition-all outline-none focus-visible:ring-[3px] focus-visible:outline-1 [&_svg:not([class*='size-'])]:size-4"
            data-radix-collection-item=""
            data-slot="navigation-menu-link"
            href="/about"
          >
            About
          </a>
        </li>
      </ul>
    </div>
    <div
      class="absolute top-full left-0 isolate z-50 flex justify-center"
    />
  </nav>
</div>
`;

exports[`NavigationMenu stories snapshot > Desktop story renders and matches snapshot 1`] = `
<div>
  <nav
    aria-label="Main"
    class="group/navigation-menu relative flex max-w-max flex-1 items-center justify-center"
    data-orientation="horizontal"
    data-slot="navigation-menu"
    data-viewport="true"
    dir="ltr"
  >
    <div
      style="position: relative;"
    >
      <ul
        class="group flex flex-1 list-none items-center justify-center gap-1"
        data-orientation="horizontal"
        data-slot="navigation-menu-list"
        dir="ltr"
      >
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <button
            aria-controls="radix-«rj»-content-radix-«rk»"
            aria-expanded="false"
            class="group inline-flex h-9 w-max items-center justify-center rounded-md bg-background px-4 py-2 text-sm font-medium hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground disabled:pointer-events-none disabled:opacity-50 data-[state=open]:hover:bg-accent data-[state=open]:text-accent-foreground data-[state=open]:focus:bg-accent data-[state=open]:bg-accent/50 focus-visible:ring-ring/50 outline-none transition-[color,box-shadow] focus-visible:ring-[3px] focus-visible:outline-1 group"
            data-radix-collection-item=""
            data-slot="navigation-menu-trigger"
            data-state="closed"
            id="radix-«rj»-trigger-radix-«rk»"
          >
            Components
             
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down relative top-[1px] ml-1 size-3 transition duration-300 group-data-[state=open]:rotate-180"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </li>
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <a
            class="data-[active=true]:focus:bg-accent data-[active=true]:hover:bg-accent data-[active=true]:bg-accent/50 data-[active=true]:text-accent-foreground hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground focus-visible:ring-ring/50 [&_svg:not([class*='text-'])]:text-muted-foreground flex flex-col gap-1 rounded-sm p-2 text-sm transition-all outline-none focus-visible:ring-[3px] focus-visible:outline-1 [&_svg:not([class*='size-'])]:size-4"
            data-radix-collection-item=""
            data-slot="navigation-menu-link"
            href="/docs"
          >
            Documentation
          </a>
        </li>
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <a
            class="data-[active=true]:focus:bg-accent data-[active=true]:hover:bg-accent data-[active=true]:bg-accent/50 data-[active=true]:text-accent-foreground hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground focus-visible:ring-ring/50 [&_svg:not([class*='text-'])]:text-muted-foreground flex flex-col gap-1 rounded-sm p-2 text-sm transition-all outline-none focus-visible:ring-[3px] focus-visible:outline-1 [&_svg:not([class*='size-'])]:size-4"
            data-radix-collection-item=""
            data-slot="navigation-menu-link"
            href="/about"
          >
            About
          </a>
        </li>
      </ul>
    </div>
    <div
      class="absolute top-full left-0 isolate z-50 flex justify-center"
    />
  </nav>
</div>
`;

exports[`NavigationMenu stories snapshot > Mobile story renders and matches snapshot 1`] = `
<div>
  <nav
    aria-label="Main"
    class="group/navigation-menu relative flex max-w-max flex-1 items-center justify-center"
    data-orientation="horizontal"
    data-slot="navigation-menu"
    data-viewport="true"
    dir="ltr"
  >
    <div
      style="position: relative;"
    >
      <ul
        class="group flex flex-1 list-none items-center justify-center gap-1"
        data-orientation="horizontal"
        data-slot="navigation-menu-list"
        dir="ltr"
      >
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <button
            aria-controls="radix-«rb»-content-radix-«rc»"
            aria-expanded="false"
            class="group inline-flex h-9 w-max items-center justify-center rounded-md bg-background px-4 py-2 text-sm font-medium hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground disabled:pointer-events-none disabled:opacity-50 data-[state=open]:hover:bg-accent data-[state=open]:text-accent-foreground data-[state=open]:focus:bg-accent data-[state=open]:bg-accent/50 focus-visible:ring-ring/50 outline-none transition-[color,box-shadow] focus-visible:ring-[3px] focus-visible:outline-1 group"
            data-radix-collection-item=""
            data-slot="navigation-menu-trigger"
            data-state="closed"
            id="radix-«rb»-trigger-radix-«rc»"
          >
            Components
             
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down relative top-[1px] ml-1 size-3 transition duration-300 group-data-[state=open]:rotate-180"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </li>
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <a
            class="data-[active=true]:focus:bg-accent data-[active=true]:hover:bg-accent data-[active=true]:bg-accent/50 data-[active=true]:text-accent-foreground hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground focus-visible:ring-ring/50 [&_svg:not([class*='text-'])]:text-muted-foreground flex flex-col gap-1 rounded-sm p-2 text-sm transition-all outline-none focus-visible:ring-[3px] focus-visible:outline-1 [&_svg:not([class*='size-'])]:size-4"
            data-radix-collection-item=""
            data-slot="navigation-menu-link"
            href="/docs"
          >
            Documentation
          </a>
        </li>
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <a
            class="data-[active=true]:focus:bg-accent data-[active=true]:hover:bg-accent data-[active=true]:bg-accent/50 data-[active=true]:text-accent-foreground hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground focus-visible:ring-ring/50 [&_svg:not([class*='text-'])]:text-muted-foreground flex flex-col gap-1 rounded-sm p-2 text-sm transition-all outline-none focus-visible:ring-[3px] focus-visible:outline-1 [&_svg:not([class*='size-'])]:size-4"
            data-radix-collection-item=""
            data-slot="navigation-menu-link"
            href="/about"
          >
            About
          </a>
        </li>
      </ul>
    </div>
    <div
      class="absolute top-full left-0 isolate z-50 flex justify-center"
    />
  </nav>
</div>
`;

exports[`NavigationMenu stories snapshot > Simple story renders and matches snapshot 1`] = `
<div>
  <nav
    aria-label="Main"
    class="group/navigation-menu relative flex max-w-max flex-1 items-center justify-center"
    data-orientation="horizontal"
    data-slot="navigation-menu"
    data-viewport="true"
    dir="ltr"
  >
    <div
      style="position: relative;"
    >
      <ul
        class="group flex flex-1 list-none items-center justify-center gap-1"
        data-orientation="horizontal"
        data-slot="navigation-menu-list"
        dir="ltr"
      >
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <a
            class="data-[active=true]:focus:bg-accent data-[active=true]:hover:bg-accent data-[active=true]:bg-accent/50 data-[active=true]:text-accent-foreground hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground focus-visible:ring-ring/50 [&_svg:not([class*='text-'])]:text-muted-foreground flex flex-col gap-1 rounded-sm p-2 text-sm transition-all outline-none focus-visible:ring-[3px] focus-visible:outline-1 [&_svg:not([class*='size-'])]:size-4"
            data-radix-collection-item=""
            data-slot="navigation-menu-link"
            href="/home"
          >
            Home
          </a>
        </li>
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <a
            class="data-[active=true]:focus:bg-accent data-[active=true]:hover:bg-accent data-[active=true]:bg-accent/50 data-[active=true]:text-accent-foreground hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground focus-visible:ring-ring/50 [&_svg:not([class*='text-'])]:text-muted-foreground flex flex-col gap-1 rounded-sm p-2 text-sm transition-all outline-none focus-visible:ring-[3px] focus-visible:outline-1 [&_svg:not([class*='size-'])]:size-4"
            data-radix-collection-item=""
            data-slot="navigation-menu-link"
            href="/about"
          >
            About
          </a>
        </li>
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <a
            class="data-[active=true]:focus:bg-accent data-[active=true]:hover:bg-accent data-[active=true]:bg-accent/50 data-[active=true]:text-accent-foreground hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground focus-visible:ring-ring/50 [&_svg:not([class*='text-'])]:text-muted-foreground flex flex-col gap-1 rounded-sm p-2 text-sm transition-all outline-none focus-visible:ring-[3px] focus-visible:outline-1 [&_svg:not([class*='size-'])]:size-4"
            data-radix-collection-item=""
            data-slot="navigation-menu-link"
            href="/contact"
          >
            Contact
          </a>
        </li>
      </ul>
    </div>
    <div
      class="absolute top-full left-0 isolate z-50 flex justify-center"
    />
  </nav>
</div>
`;

exports[`NavigationMenu stories snapshot > Tablet story renders and matches snapshot 1`] = `
<div>
  <nav
    aria-label="Main"
    class="group/navigation-menu relative flex max-w-max flex-1 items-center justify-center"
    data-orientation="horizontal"
    data-slot="navigation-menu"
    data-viewport="true"
    dir="ltr"
  >
    <div
      style="position: relative;"
    >
      <ul
        class="group flex flex-1 list-none items-center justify-center gap-1"
        data-orientation="horizontal"
        data-slot="navigation-menu-list"
        dir="ltr"
      >
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <button
            aria-controls="radix-«rf»-content-radix-«rg»"
            aria-expanded="false"
            class="group inline-flex h-9 w-max items-center justify-center rounded-md bg-background px-4 py-2 text-sm font-medium hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground disabled:pointer-events-none disabled:opacity-50 data-[state=open]:hover:bg-accent data-[state=open]:text-accent-foreground data-[state=open]:focus:bg-accent data-[state=open]:bg-accent/50 focus-visible:ring-ring/50 outline-none transition-[color,box-shadow] focus-visible:ring-[3px] focus-visible:outline-1 group"
            data-radix-collection-item=""
            data-slot="navigation-menu-trigger"
            data-state="closed"
            id="radix-«rf»-trigger-radix-«rg»"
          >
            Components
             
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down relative top-[1px] ml-1 size-3 transition duration-300 group-data-[state=open]:rotate-180"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </li>
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <a
            class="data-[active=true]:focus:bg-accent data-[active=true]:hover:bg-accent data-[active=true]:bg-accent/50 data-[active=true]:text-accent-foreground hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground focus-visible:ring-ring/50 [&_svg:not([class*='text-'])]:text-muted-foreground flex flex-col gap-1 rounded-sm p-2 text-sm transition-all outline-none focus-visible:ring-[3px] focus-visible:outline-1 [&_svg:not([class*='size-'])]:size-4"
            data-radix-collection-item=""
            data-slot="navigation-menu-link"
            href="/docs"
          >
            Documentation
          </a>
        </li>
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <a
            class="data-[active=true]:focus:bg-accent data-[active=true]:hover:bg-accent data-[active=true]:bg-accent/50 data-[active=true]:text-accent-foreground hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground focus-visible:ring-ring/50 [&_svg:not([class*='text-'])]:text-muted-foreground flex flex-col gap-1 rounded-sm p-2 text-sm transition-all outline-none focus-visible:ring-[3px] focus-visible:outline-1 [&_svg:not([class*='size-'])]:size-4"
            data-radix-collection-item=""
            data-slot="navigation-menu-link"
            href="/about"
          >
            About
          </a>
        </li>
      </ul>
    </div>
    <div
      class="absolute top-full left-0 isolate z-50 flex justify-center"
    />
  </nav>
</div>
`;

exports[`NavigationMenu stories snapshot > WithoutViewport story renders and matches snapshot 1`] = `
<div>
  <nav
    aria-label="Main"
    class="group/navigation-menu relative flex max-w-max flex-1 items-center justify-center"
    data-orientation="horizontal"
    data-slot="navigation-menu"
    data-viewport="false"
    dir="ltr"
  >
    <div
      style="position: relative;"
    >
      <ul
        class="group flex flex-1 list-none items-center justify-center gap-1"
        data-orientation="horizontal"
        data-slot="navigation-menu-list"
        dir="ltr"
      >
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <button
            aria-controls="radix-«r4»-content-radix-«r5»"
            aria-expanded="false"
            class="group inline-flex h-9 w-max items-center justify-center rounded-md bg-background px-4 py-2 text-sm font-medium hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground disabled:pointer-events-none disabled:opacity-50 data-[state=open]:hover:bg-accent data-[state=open]:text-accent-foreground data-[state=open]:focus:bg-accent data-[state=open]:bg-accent/50 focus-visible:ring-ring/50 outline-none transition-[color,box-shadow] focus-visible:ring-[3px] focus-visible:outline-1 group"
            data-radix-collection-item=""
            data-slot="navigation-menu-trigger"
            data-state="closed"
            id="radix-«r4»-trigger-radix-«r5»"
          >
            Products
             
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down relative top-[1px] ml-1 size-3 transition duration-300 group-data-[state=open]:rotate-180"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </li>
        <li
          class="relative"
          data-slot="navigation-menu-item"
        >
          <a
            class="data-[active=true]:focus:bg-accent data-[active=true]:hover:bg-accent data-[active=true]:bg-accent/50 data-[active=true]:text-accent-foreground hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground focus-visible:ring-ring/50 [&_svg:not([class*='text-'])]:text-muted-foreground flex flex-col gap-1 rounded-sm p-2 text-sm transition-all outline-none focus-visible:ring-[3px] focus-visible:outline-1 [&_svg:not([class*='size-'])]:size-4"
            data-radix-collection-item=""
            data-slot="navigation-menu-link"
            href="/support"
          >
            Support
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;
